--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section>
         <h1>Welcome</h1>
         <h3>Click start to begin the quiz</h3>
-        <button type="button">Start</button>
+        <button type="button" id="start">Start</button>
     </section>
     <script src="./script.js"></script>
 </body>
