added and tested timer function, created question and answer containers, created end quiz function

--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
 </head>
 <body>
     <header>
-        <h2 id="timeRemaining">Time Remaining: </h2>
+        <h2 id="timeRemaining">Time Remaining: <span id="time"></span></h2>
     </header>
-    <section>
+    <section id="welcomeMessage">
         <h1>Welcome</h1>
         <h3>Click start to begin the quiz</h3>
-        <button type="button" id="start">Start</button>
+        <button type="button" id="startButton">Start</button>
+    </section>
+    <section class="questionContainer">
+        <h2 id="questionTitle"></h2>
+        <div id="answerContainer"> </div>
     </section>
     <script src="./script.js"></script>
 </body>
