--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         <h2 id="timeRemaining">Time Remaining: <span id="time"></span></h2>
     </header>
     <section id="welcomeMessage">
-        <h1>Welcome</h1>
+        <h1>Welcome!</h1>
         <h3>Click start to begin the quiz</h3>
         <button type="button" id="startButton">Start</button>
     </section>
-    <section class="questionContainer">
+    <section class="questionContainer" id="questionContainer">
         <h2 id="questionTitle"></h2>
         <div id="answerContainer"> </div>
     </section>
