renamed variables, worked on high scores functions, added save button, updated readme

--- a/index.html
+++ b/index.html
@@ -29,14 +29,15 @@
                 <label for="player-name">Enter your name: </label>
                 <input type="text" name="player-name" id="player-name" />
             </form>
-        </div>
-        <div id="highScores">    
-            <h1>High Scores: </h1>
-            <ol id="score-list"></ol>
-            <button id="clearButton">Clear</button>
+            <button type="button" id="submitButton">Save Score</button>
         </div>
         <div class="playAgainContainer">
             <button type="button" id="playAgainButton">Play Again</button>
+        </div>
+        <div id="highScores">    
+            <h1>High Scores: </h1>
+            <ul id="score-list"></ul>
+            <button id="clearButton">Clear</button>
         </div>
     </section>
     <script src="./script.js"></script>
